// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly if there is just one expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totaling
       
      <span>
        $99.99
      </span>
    </h3>
    <Link
      className="button"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`should render ExpenseSummary correctly if there is multiple expenses 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h3
      className="page-header__title"
    >
      Viewing 
      <span>
        3
      </span>
       
      expenses
       totaling
       
      <span>
        $499.99
      </span>
    </h3>
    <Link
      className="button"
      replace={false}
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
